# MoeChat

./: Chat-Server.py  README.md  chat_server.py  chat_server_Ver-0.1.py  client-requirements.txt  client.py  client_cli.py  config.yaml  extra-req2.txt  req.txt  requirements.txt  run.bat  run.sh  test.py
Expand_MoeChat/: AudioPlayer.cpp  AudioPlayer.h  AvatarWidget.cpp  AvatarWidget.h  CMakeLists.txt  ChatInterface.cpp  ChatInterface.h  ChatMessageBubble.cpp  ChatMessageBubble.h  ChatMessageItem.cpp  ChatMessageItem.h  ChatWidget.cpp  ChatWidget.h  ContentContainer.cpp  ContentContainer.h  FloatingSidebar.cpp  FloatingSidebar.h  Markdown.h  TipButton.cpp  TipButton.h  resource.qrc
client-gui/src/: client_gui.py  client_utils.py  ui.py  utils.py
utilss/: __init__.py  agent.py  config.py  core_mem.py  data_base.py  embedding.py  long_mem.py  prompt.py  sv.py
